Added Chat Application project to My Work section

--- a/index.html
+++ b/index.html
@@ -288,6 +288,30 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-placeholder">
+                            <i class="fas fa-comments"></i>
+                        </div>
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://jd-undercoder.github.io/chat-application/" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
+                                <a href="https://github.com/JD-UnderCoder/chat-application" target="_blank" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Chat Application</h3>
+                        <p>A real-time chat app built using HTML, CSS, JS, and Firebase.</p>
+                        <div class="project-tags">
+                            <span class="tag">HTML</span>
+                            <span class="tag">CSS</span>
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">Firebase</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
